@@ -245,6 +245,7 @@ class Measure : public MeasureBase {
       bool hasVoice(int track) const;
       bool isMeasureRest(int staffIdx);
       bool isFullMeasureRest();
+      bool isRepeatMeasure();
       bool visible(int staffIdx) const;
       bool slashStyle(int staffIdx) const;
 
